--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 numpy = "^1.26.4"
+torch = "^2.3.0"
+flake8 = "^7.0.0"
 
 
 [build-system]
