--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
-name = "comp-rep"
+name = "comp_rep"
 version = "0.1.0"
 description = ""
 authors = ["Sondre Wold <sondrewold1@gmail.com>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -13,6 +14,8 @@ flake8 = "^7.0.0"
 pytest = "^8.2.1"
 pre-commit = "^3.7.1"
 
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
