--- a/comp-rep/.pre-commit-config.yaml
+++ b/comp-rep/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: black
         language_version: python3
-        args: ['--config=pyproject.toml']
+        args: ['--config=../pyproject.toml']
   - repo: https://github.com/PyCQA/isort
     rev: "5.13.2"
     hooks:
