--- a/comp-rep/.pre-commit-config.yaml
+++ b/comp-rep/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: flake8
         exclude: /tests/
-        additional_dependencies: ['toml', 'flake8-comprehensions', 'flake8-rst-docstrings']
+        args: ["--ignore=E203, E501, W503"]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v1.3.0"
     hooks:
