--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -14,6 +14,8 @@ flake8 = "^7.0.0"
 pytest = "^8.2.1"
 pre-commit = "^3.7.1"
 tqdm = "^4.66.4"
+lightning = "^2.3.0"
+tensorboard = "^2.17.0"
 
 [tool.isort]
 profile = "black"
