--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -16,6 +16,7 @@ pre-commit = "^3.7.1"
 tqdm = "^4.66.4"
 lightning = "^2.3.0"
 tensorboard = "^2.17.0"
+wandb = "^0.17.3"
 
 [tool.isort]
 profile = "black"
