--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# artifacts
+comp-rep/example_runs/wandb
+comp-rep/model_checkpoints
+comp-rep/predictions
+
+# data
+data/base_tasks
