--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -24,3 +24,10 @@ profile = "black"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:pkg_resources is deprecated as an API*",
+    "ignore:Deprecated call to `pkg_resources.declare_namespace`*",
+    "ignore:Type google._upb._message.*"
+]
