--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -17,6 +17,7 @@ tqdm = "^4.66.4"
 lightning = "^2.3.0"
 tensorboard = "^2.17.0"
 wandb = "^0.17.3"
+nnsight = "^0.2.21"
 
 [tool.isort]
 profile = "black"
