adapt keyword style

--- a/comp-rep/comp_rep/pruning/mean_ablation_values/append_mean_ablation_values.json
+++ b/comp-rep/comp_rep/pruning/mean_ablation_values/append_mean_ablation_values.json
@@ -1,5 +1,5 @@
 {
-    "model.encoder.layers[0].feed_forward": [
+    "model.encoder.layers.0.feed_forward": [
         0.20372818410396576,
         0.163028284907341,
         0.021584223955869675,
@@ -513,7 +513,7 @@
         -0.18993671238422394,
         -0.030215797945857048
     ],
-    "model.encoder.layers[0].self_attention": [
+    "model.encoder.layers.0.self_attention": [
         0.1205776184797287,
         0.0867205262184143,
         0.053336646407842636,
@@ -1027,7 +1027,7 @@
         -0.09618421643972397,
         -0.03188825026154518
     ],
-    "model.decoder.layers[0].self_attention": [
+    "model.decoder.layers.0.self_attention": [
         -0.012299967929720879,
         0.10320574045181274,
         0.049579113721847534,
@@ -1541,7 +1541,7 @@
         0.03575383871793747,
         -0.11248991638422012
     ],
-    "model.decoder.layers[0].cross_attention": [
+    "model.decoder.layers.0.cross_attention": [
         0.340437114238739,
         -0.10634269565343857,
         0.127730131149292,
@@ -2055,7 +2055,7 @@
         -0.04857263341546059,
         -0.17813949286937714
     ],
-    "model.decoder.layers[0].feed_forward": [
+    "model.decoder.layers.0.feed_forward": [
         0.213654026389122,
         -0.22014789283275604,
         0.3022025227546692,
@@ -2569,7 +2569,7 @@
         0.5204088091850281,
         0.20572534203529358
     ],
-    "model.encoder.layers[1].feed_forward": [
+    "model.encoder.layers.1.feed_forward": [
         -0.15982016921043396,
         -0.10257913172245026,
         0.031115945428609848,
@@ -3083,7 +3083,7 @@
         0.1309671550989151,
         -0.4522506296634674
     ],
-    "model.encoder.layers[1].self_attention": [
+    "model.encoder.layers.1.self_attention": [
         0.0772584080696106,
         -0.07259701937437057,
         -0.08845385909080505,
@@ -3597,7 +3597,7 @@
         0.0926603227853775,
         -0.057898905128240585
     ],
-    "model.decoder.layers[1].self_attention": [
+    "model.decoder.layers.1.self_attention": [
         0.08854547142982483,
         -0.15066839754581451,
         0.12266270816326141,
@@ -4111,7 +4111,7 @@
         0.19546127319335938,
         -0.02357650361955166
     ],
-    "model.decoder.layers[1].cross_attention": [
+    "model.decoder.layers.1.cross_attention": [
         -0.04694391041994095,
         -0.09454356878995895,
         -0.0727430135011673,
@@ -4625,7 +4625,7 @@
         -0.02729792520403862,
         -0.0827174112200737
     ],
-    "model.decoder.layers[1].feed_forward": [
+    "model.decoder.layers.1.feed_forward": [
         0.06548275053501129,
         -0.1576405167579651,
         -0.14261114597320557,
@@ -5139,7 +5139,7 @@
         0.301631361246109,
         0.26646849513053894
     ],
-    "model.encoder.layers[2].feed_forward": [
+    "model.encoder.layers.2.feed_forward": [
         0.16284514963626862,
         0.1075601801276207,
         0.18973436951637268,
@@ -5653,7 +5653,7 @@
         0.16151976585388184,
         -0.14151202142238617
     ],
-    "model.encoder.layers[2].self_attention": [
+    "model.encoder.layers.2.self_attention": [
         0.04507593438029289,
         0.03431510925292969,
         -0.562143862247467,
@@ -6167,7 +6167,7 @@
         0.04207637161016464,
         0.0676458328962326
     ],
-    "model.decoder.layers[2].self_attention": [
+    "model.decoder.layers.2.self_attention": [
         0.1425314098596573,
         -0.08294078707695007,
         0.05412319675087929,
@@ -6681,7 +6681,7 @@
         -0.09313777089118958,
         -0.10894081741571426
     ],
-    "model.decoder.layers[2].cross_attention": [
+    "model.decoder.layers.2.cross_attention": [
         0.02151745744049549,
         0.01750553958117962,
         -0.17389309406280518,
@@ -7195,7 +7195,7 @@
         0.12595626711845398,
         0.03203175216913223
     ],
-    "model.decoder.layers[2].feed_forward": [
+    "model.decoder.layers.2.feed_forward": [
         -0.12248126417398453,
         -0.9114959239959717,
         -1.134452223777771,
@@ -7709,7 +7709,7 @@
         0.683395266532898,
         0.41192707419395447
     ],
-    "model.encoder.layers[3].feed_forward": [
+    "model.encoder.layers.3.feed_forward": [
         0.47866106033325195,
         0.2253839075565338,
         0.4771469533443451,
@@ -8223,7 +8223,7 @@
         0.16556613147258759,
         0.19925671815872192
     ],
-    "model.encoder.layers[3].self_attention": [
+    "model.encoder.layers.3.self_attention": [
         0.12597869336605072,
         0.15205800533294678,
         -0.049011554569005966,
@@ -8737,7 +8737,7 @@
         -0.007260660640895367,
         -0.06391045451164246
     ],
-    "model.decoder.layers[3].self_attention": [
+    "model.decoder.layers.3.self_attention": [
         0.047878049314022064,
         -0.02912461943924427,
         -0.1164177879691124,
@@ -9251,7 +9251,7 @@
         -0.003633070969954133,
         -0.044869568198919296
     ],
-    "model.decoder.layers[3].cross_attention": [
+    "model.decoder.layers.3.cross_attention": [
         0.008324199356138706,
         -0.03523542732000351,
         0.04439428076148033,
@@ -9765,7 +9765,7 @@
         0.11051829159259796,
         0.019242873415350914
     ],
-    "model.decoder.layers[3].feed_forward": [
+    "model.decoder.layers.3.feed_forward": [
         -0.5359020829200745,
         -0.5056707859039307,
         -0.33012932538986206,
@@ -10279,7 +10279,7 @@
         0.7229264974594116,
         0.5498428344726562
     ],
-    "model.encoder.layers[4].feed_forward": [
+    "model.encoder.layers.4.feed_forward": [
         0.12307314574718475,
         -0.132016122341156,
         0.4695059061050415,
@@ -10793,7 +10793,7 @@
         0.1592484712600708,
         0.13832421600818634
     ],
-    "model.encoder.layers[4].self_attention": [
+    "model.encoder.layers.4.self_attention": [
         0.0235698651522398,
         0.10094699263572693,
         -0.2086804062128067,
@@ -11307,7 +11307,7 @@
         -0.19875340163707733,
         -0.10087892413139343
     ],
-    "model.decoder.layers[4].self_attention": [
+    "model.decoder.layers.4.self_attention": [
         -0.032095346599817276,
         0.02056768164038658,
         -0.010166876018047333,
@@ -11821,7 +11821,7 @@
         0.17975886166095734,
         0.04005294293165207
     ],
-    "model.decoder.layers[4].cross_attention": [
+    "model.decoder.layers.4.cross_attention": [
         -0.13521809875965118,
         0.062382783740758896,
         -0.192977175116539,
@@ -12335,7 +12335,7 @@
         0.03678851202130318,
         0.055792342871427536
     ],
-    "model.decoder.layers[4].feed_forward": [
+    "model.decoder.layers.4.feed_forward": [
         -0.05947437882423401,
         -0.21715213358402252,
         1.3027925491333008,
@@ -12849,7 +12849,7 @@
         0.1328200399875641,
         0.5698615312576294
     ],
-    "model.encoder.layers[5].feed_forward": [
+    "model.encoder.layers.5.feed_forward": [
         0.39342790842056274,
         0.0846593901515007,
         0.4702639579772949,
@@ -13363,7 +13363,7 @@
         0.4077177345752716,
         0.07770245522260666
     ],
-    "model.encoder.layers[5].self_attention": [
+    "model.encoder.layers.5.self_attention": [
         0.024860206991434097,
         -0.0304262638092041,
         0.10888252407312393,
@@ -13877,7 +13877,7 @@
         0.019271140918135643,
         -0.0914410725235939
     ],
-    "model.decoder.layers[5].self_attention": [
+    "model.decoder.layers.5.self_attention": [
         -0.015773989260196686,
         0.056419506669044495,
         0.07786045968532562,
@@ -14391,7 +14391,7 @@
         -0.09935896098613739,
         0.0475258007645607
     ],
-    "model.decoder.layers[5].cross_attention": [
+    "model.decoder.layers.5.cross_attention": [
         -0.305536687374115,
         0.10171026736497879,
         -0.15113449096679688,
@@ -14905,7 +14905,7 @@
         -0.04459889233112335,
         -0.010567696765065193
     ],
-    "model.decoder.layers[5].feed_forward": [
+    "model.decoder.layers.5.feed_forward": [
         0.049389299005270004,
         -0.31367960572242737,
         0.22588106989860535,
