--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -18,6 +18,7 @@ lightning = "^2.3.0"
 tensorboard = "^2.17.0"
 wandb = "^0.17.3"
 nnsight = "^0.2.21"
+matplotlib = "^3.9.2"
 
 [tool.isort]
 profile = "black"
