--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -19,6 +19,7 @@ tensorboard = "^2.17.0"
 wandb = "^0.17.3"
 nnsight = "^0.2.21"
 matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
 
 [tool.isort]
 profile = "black"
