--- a/comp-rep/pyproject.toml
+++ b/comp-rep/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comp_rep"
 version = "0.1.0"
 description = ""
-license = "MIT"
+license = "CC-BY-SA-4.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
